--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       href="https://use.fontawesome.com/releases/v5.0.6/css/all.css"
       rel="stylesheet"
     />
-    <title>Inventory Management</title>
+    <title>IMPORT FOLLOW UP</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
